--- a/simple-web-template/Views/Shared/_Layout.cshtml
+++ b/simple-web-template/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My lovaly template</p>
+            <p>&copy; <a href="https://github.com/navff">navff</a></p>
         </footer>
     </div>
 
